Integrated Launch4j
Will now build artifact .jar and wrap in an .exe in target directory.